--- a/.settings/org.eclipse.cdt.core.prefs
+++ b/.settings/org.eclipse.cdt.core.prefs
@@ -1,6 +1,9 @@
 eclipse.preferences.version=1
 environment/project/cdt.managedbuild.config.gnu.exe.debug.1993777662/DISPLAY/delimiter=\:
-environment/project/cdt.managedbuild.config.gnu.exe.debug.1993777662/DISPLAY/operation=append
-environment/project/cdt.managedbuild.config.gnu.exe.debug.1993777662/DISPLAY/value=${DISPLAY}
+environment/project/cdt.managedbuild.config.gnu.exe.debug.1993777662/DISPLAY/operation=replace
+environment/project/cdt.managedbuild.config.gnu.exe.debug.1993777662/DISPLAY/value=\:0\:${DISPLAY}
+environment/project/cdt.managedbuild.config.gnu.exe.debug.1993777662/XDG_RUNTIME_DIR/delimiter=\:
+environment/project/cdt.managedbuild.config.gnu.exe.debug.1993777662/XDG_RUNTIME_DIR/operation=replace
+environment/project/cdt.managedbuild.config.gnu.exe.debug.1993777662/XDG_RUNTIME_DIR/value=/run/user/1000\:${XDG_RUNTIME_DIR}
 environment/project/cdt.managedbuild.config.gnu.exe.debug.1993777662/append=true
 environment/project/cdt.managedbuild.config.gnu.exe.debug.1993777662/appendContributed=true
